--- a/RFMiner/RFMiner.vcxproj
+++ b/RFMiner/RFMiner.vcxproj
@@ -135,6 +135,9 @@
     <ClCompile Include="Tester.cpp" />
     <ClCompile Include="TestFunctions.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
